--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -44,28 +44,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-          <p>App Developing</p>
+          <p>Front End Website Developing</p>
           <div class="skill">
             <div class="skill-bar skill_and wow slideInLeft animated">
-              <span class="skill-count_and" style="font-size: 17px; color: white; float: right; padding-right: 5px;">60%</span>
+              <span class="skill-count_and" style="font-size: 17px; color: white; float: right; padding-right: 5px;">80%</span>
             </div>
           </div>
-          <p>Full Stack Programming</p>
+          <p>App Developing</p>
           <div class="skill">
             <div class="skill-bar skill_fsp wow slideInLeft animated">
               <span class="skill-count_fsp" style="font-size: 17px; color: white; float: right; padding-right: 5px;">50%</span>
             </div>
           </div>
-          <p>Photoshop</p>
+          <p>Major Languages (Javascript, C++, Python, JAVA)</p>
           <div class="skill">
             <div class="skill-bar skill_ps wow slideInLeft animated">
-              <span class="skill-count_ps" style="font-size: 17px; color: white; float: right; padding-right: 5px;">20%</span>
+              <span class="skill-count_ps" style="font-size: 17px; color: white; float: right; padding-right: 5px;">70%</span>
             </div>
           </div>
           <p>Artificial Intelligence</p>
           <div class="skill">
             <div class="skill-bar skill_ai wow slideInLeft animated">
-              <span class="skill-count_ai" style="font-size: 17px; color: white; float: right; padding-right: 5px;">10%</span>
+              <span class="skill-count_ai" style="font-size: 17px; color: white; float: right; padding-right: 5px;">20%</span>
             </div>
           </div>
           <br>
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             </div>
           </div>
           <br><hr>
-          <p class="w3-large"><b><i class="fa fa-info-circle fa-fw w3-margin-right w3-text-teal speech-bubble"></i>Hobbies</b></p>
+          <p class="w3-large"><b><i class="fa fa-info-circle fa-fw w3-margin-right w3-text-teal speech-bubble"></i>Hobbies    <i style="font-size: 12px;">(List items are clickable!)</i></b></p>
           <div class="hobby-list">
             <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn"><b><i class="fa fa-futbol-o fa-fw w3-margin-right w3-text-teal"></i>Sports</b></p>
             <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="0.5s"><b><i class="fa fa-book fa-fw w3-margin-right w3-text-teal"></i>Comic Books</b></p>
@@ -146,22 +146,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle-o fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Personal Projects</h2>
 
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Encrypto 2.0 (<a href="#" target="_blank">www.myapp.com</a>)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2018 <span class="w3-tag w3-text-white w3-round wow flash" data-wow-delay = "1s" style="float: right; background-color: #E7B416;">In Progress</span></h6>
-          <p>After the success of the concept of Encrypto, I decided to give my app a brand new UI which eased accessibility and eliminated the major bugs and security issues.</p>
+          <h5 class="w3-opacity"><b>My MIT App (A new update)</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flash" data-wow-delay = "1s" style="float: right; background-color: #E7B416;">In Progress</span></h6>
+          <p>Along with team S.C.R.I.P.T, I am working on an updated version of the My MIT App with navigation inside college facility, classroom tracker, etc.</p>
         </div>
         <hr>
         <div class="w3-container hideproj">
-          <h5 class="w3-opacity"><b>Stark Industries Website (<a href="../Learner/html/load.html" target="_blank">www.starkindustries.com</a>)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 <span class="w3-tag w3-text-white w3-round wow flash" style="float: right; background-color: #E7B416;">In Progress</span></h6>
-          <p>As I was working as an intern at IdeaLake, I took up the task of designing a practice webpage with the fantasies of a comic-book fan in my mind. </p>
-          <p>It was the first in it's kind and broke harlem in the nerd fan base.</p><br>
+          <h5 class="w3-opacity"><b>InstaBlogger 3000</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2018 <span class="w3-tag w3-text-white w3-round wow flash" style="float: right; background-color: #E7B416;">In Progress</span></h6>
+          <p>A personalized blog tracker built in Python, with multi-user facility and password protection.</p>
+          <p>I still have no intentions of making it public, until I design it with a proper GUI and an online 24x7 running database.</p><br>
           <hr>
         </div>
 
         <div class="w3-container hideproj">
-          <h5 class="w3-opacity"><b>Encrypto (<a href="#" target="_blank">www.myapp.com</a>)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2017<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
+          <h5 class="w3-opacity"><b>Encrypto</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>This was the first official app I had developed. It helps one to pass text in an encrypted manner which enhances privacy of messaging.</p><p>For further information, please feel free to check out the app provided in the website mentioned above.</p>
           <br>
         </div>
@@ -203,12 +203,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
       </div>
 
-      <div class="w3-container">
-        <div class="w3-container w3-card w3-white">
-          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-info-circle fa-fw w3-text-teal w3-xxlarge"></i>Hello World</h2>
-          Lorem ipsum 
-            
-        </div>
       </div>
 
     <!-- End Right Column -->
@@ -225,9 +219,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-container">
     <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
     <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-    <a href="#"><i class="fa fa-linkedin w3-hover-opacity"></i></a><br><br>
+    <a href="https://github.com/aniket-spidey" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a><br><br>
   </div>
   <div class="wow tada w3-container padding_bottom">
     <i style="background-color: white; color: #009688; border-radius: 5px; padding: 5px; margin-bottom: 10px; ">Make sure you have logged into your own account before visiting mine!</i>
