Changes in index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Welcome to my page</title>
 	<link rel="icon" href="images/favicon.png">
+	<link rel="stylesheet" href="css/homepage.css">
+	<link rel="stylesheet" href="css/w3.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-	<img src="images/loader(5).gif" style="position: absolute; left: 40%; top: 25%;">
-	<script>setTimeout(function(){window.location.href='AniketCV_home.html'},3000);</script>
+	<div class="outer">
+  		<div class="middle">
+    		<div class="inner">
+      			<img src="images/loader(5).gif">
+				<script>setTimeout(function(){window.location.href='AniketCV_home.html'},3000);</script>
+    		</div>
+  		</div>
+	</div>
+			
 </body>
 </html>
