--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -126,6 +126,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Web Developer at jS / <a href = "https://www.jamessolomon.co.in/" target="_blank">www.jamessolomon.co.in</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>I am the Web Developer of a new startup by James Solomon, known as jS. We are providing a student interactive platform, whose website will be launched in a short time.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>Web Programming at IdeaLake / <a href = "https://www.idealake.com/" target="_blank">www.idealake.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 - July 2018</span></h6>
           <p>I started my training in web programming under the guidance of Idealake. The work environment was comfortable and my colleagues were highly trained professionals who made me a better version of myself.</p>
@@ -141,10 +147,29 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
       </div>
     </div>
+    <div class="wow bounceInUp">
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>College Experience and Achievements</h2>
+        <div class="w3-container">
+          <p class="wow fadeIn">Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="0.5s"></i>Head of Team S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"></i>Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="1.5s">Scored 50/50 in M1 and M2 consecutively</p>
+            <p class="wow fadeIn" data-wow-delay="2.0s">Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
+            <p class="wow fadeIn" data-wow-delay="2.5s">Completed N5 Level Japanese</p>
+        </div>
+      </div>
+    </div>
     <div class="wow bounceInUp" data-wow-delay="0.5s">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle-o fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Personal Projects</h2>
-
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>CGPA Calculator for SY.B.Tech CSE ( <a href = "https://bit.ly/cgpasycse" target="_blank">bit.ly/cgpasycse )</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
+          <p>As soon as the results of Trimester IV was out, I designed a GPA calculator so that the students can check their GPA for the current Trimester.</p>
+          <p></p>
+        </div>
+        <hr>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>My MIT App (A new update)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flash" data-wow-delay = "1s" style="float: right; background-color: #E7B416;">In Progress</span></h6>
@@ -175,7 +200,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>MIT Pune</b></h5>
+          <h5 class="w3-opacity"><b>MIT-WPU</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>Bachelor's Degree in CSE (Computer Science and Engineering)</p>
           <hr>
