--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -152,9 +152,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>College Experience and Achievements</h2>
         <div class="w3-container">
           <p class="wow fadeIn">Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.5s"></i>Head of Team S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="0.5s"></i>Member of Team S.C.R.I.P.T and Team Vegapod</p>
             <p class="wow fadeIn" data-wow-delay="1.0s"></i>Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
-            <p class="wow fadeIn" data-wow-delay="1.5s">Scored 50/50 in M1 and M2 consecutively</p>
             <p class="wow fadeIn" data-wow-delay="2.0s">Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
             <p class="wow fadeIn" data-wow-delay="2.5s">Completed N5 Level Japanese</p>
         </div>
