--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="css/homepage.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">-->
 <link rel="icon" href="images/favicon.png">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
@@ -151,11 +152,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>College Experience and Achievements</h2>
         <div class="w3-container">
-          <p class="wow fadeIn">Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.5s"><i class="fal fa-beer fa-xs fa-spin"></i>President of Team S.C.R.I.P.T, MIT Pune</p>
-            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fal fa-beer fa-xs fa-spin"></i>Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
-            <p class="wow fadeIn" data-wow-delay="2.0s">Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
-            <p class="wow fadeIn" data-wow-delay="2.5s">Completed N5 Level Japanese</p>
+          <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="0.5s"><i class="fa fa-code fa-sm fa-spin"></i> President of Team S.C.R.I.P.T, MIT Pune <a href="https://bit.ly/thescriptgroup" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="2.0s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
+            <p class="wow fadeIn" data-wow-delay="2.5s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
         </div>
       </div>
     </div>
@@ -163,7 +164,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle-o fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Personal Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>CGPA Calculator for SY.B.Tech CSE ( <a href = "https://bit.ly/cgpasycse" target="_blank">bit.ly/cgpasycse )</a></b></h5>
+          <h5 class="w3-opacity"><b>CGPA Calculator for SY.B.Tech CSE ( <a href = "https://bit.ly/sycgpamit" target="_blank">bit.ly/sycgpamit )</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>As soon as the results of Trimester IV was out, I designed a GPA calculator so that the students can check their GPA for the current Trimester.</p>
           <p></p>
@@ -241,10 +242,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <div class="w3-container">
-    <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-    <a href="https://github.com/aniket-spidey" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a><br><br>
+    <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://github.com/aniket-spidey" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity w3-padding"></i></a><br><br>
   </div>
   <div class="wow tada w3-container padding_bottom">
     <i style="background-color: white; color: #009688; border-radius: 5px; padding: 5px; margin-bottom: 10px; ">Make sure you have logged into your own account before visiting mine!</i>
