--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -51,22 +51,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <span class="skill-count_and" style="font-size: 17px; color: white; float: right; padding-right: 5px;">80%</span>
             </div>
           </div>
-          <p>App Developing</p>
-          <div class="skill">
-            <div class="skill-bar skill_fsp wow slideInLeft animated">
-              <span class="skill-count_fsp" style="font-size: 17px; color: white; float: right; padding-right: 5px;">50%</span>
-            </div>
-          </div>
           <p>Major Languages (Javascript, C++, Python, JAVA)</p>
           <div class="skill">
             <div class="skill-bar skill_ps wow slideInLeft animated">
               <span class="skill-count_ps" style="font-size: 17px; color: white; float: right; padding-right: 5px;">70%</span>
             </div>
           </div>
-          <p>Artificial Intelligence</p>
+          <p>Competative Coding </p>
+          <div class="skill">
+            <div class="skill-bar skill_cc wow slideInLeft animated">
+              <span class="skill-count_cc" style="font-size: 17px; color: white; float: right; padding-right: 5px;">50%</span>
+            </div>
+          </div>
+          <p>Machine Learning</p>
           <div class="skill">
             <div class="skill-bar skill_ai wow slideInLeft animated">
-              <span class="skill-count_ai" style="font-size: 17px; color: white; float: right; padding-right: 5px;">20%</span>
+              <span class="skill-count_ai" style="font-size: 17px; color: white; float: right; padding-right: 5px;">30%</span>
+            </div>
+          </div>
+          <p>App Developing</p>
+          <div class="skill">
+            <div class="skill-bar skill_fsp wow slideInLeft animated">
+              <span class="skill-count_fsp" style="font-size: 17px; color: white; float: right; padding-right: 5px;">40%</span>
             </div>
           </div>
           <br>
@@ -127,12 +133,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>ML Intern at AXS Solutions / <a href = "http://axs-solutions.com/" target="_blank">axs-solutions.com</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>I am an intern at AXS Solutions working on a project in the field of Deep Learning. The work exposure is off the charts, and the projects are very interesting as well as innovative.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Data Analyst Intern at Bank of India / <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank">www.bankofindia.co.in</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Wanting to explore the depths of Data Analysis, Bank of India graciously accepted me as their intern, to learn and work on their training models. The team working here has given me immense support, and a good overview of what a Data Scientist does.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
           <h5 class="w3-opacity"><b>Web Developer at jS / <a href = "https://www.jamessolomon.co.in/" target="_blank">www.jamessolomon.co.in</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>I am the Web Developer of a new startup by James Solomon, known as jS. We are providing a student interactive platform, whose website will be launched in a short time.</p>
           <hr>
         </div>
-        <div class="w3-container">
+        <div class="w3-container hidework">
           <h5 class="w3-opacity"><b>Web Programming at IdeaLake / <a href = "https://www.idealake.com/" target="_blank">www.idealake.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2018 - July 2018</span></h6>
           <p>I started my training in web programming under the guidance of Idealake. The work environment was comfortable and my colleagues were highly trained professionals who made me a better version of myself.</p>
@@ -152,11 +170,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>College Experience and Achievements</h2>
         <div class="w3-container">
-          <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.5s"><i class="fa fa-code fa-sm fa-spin"></i> President of Team S.C.R.I.P.T, MIT Pune <a href="https://bit.ly/thescriptgroup" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
-            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
-            <p class="wow fadeIn" data-wow-delay="2.0s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
-            <p class="wow fadeIn" data-wow-delay="2.5s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
+            <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Participated in AngelHack Mumbai, 2019</p>
+            <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> President of Team S.C.R.I.P.T, MIT Pune <a href="https://bit.ly/thescriptgroup" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
+            <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
+            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
         </div>
       </div>
     </div>
@@ -178,9 +197,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <hr>
         <div class="w3-container hideproj">
           <h5 class="w3-opacity"><b>InstaBlogger 3000</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2018 <span class="w3-tag w3-text-white w3-round wow flash" style="float: right; background-color: #E7B416;">In Progress</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2018 <span class="w3-tag w3-text-white w3-round wow flip" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>A personalized blog tracker built in Python, with multi-user facility and password protection.</p>
-          <p>I still have no intentions of making it public, until I design it with a proper GUI and an online 24x7 running database.</p><br>
+          <p>I still have no intentions of making it public, until I design it with a proper GUI and an online 24x7 running server.</p><br>
           <hr>
         </div>
 
@@ -243,6 +262,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p>Find me on social media.</p>
   <div class="w3-container">
     <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://www.linkedin.com/in/aniket-raj-8630b8180/" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
     <a href="https://github.com/aniket-spidey" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity w3-padding"></i></a><br><br>
