--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -172,7 +172,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
             <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Participated in AngelHack Mumbai, 2019</p>
             <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
-            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> President of Team S.C.R.I.P.T, MIT Pune <a href="https://bit.ly/thescriptgroup" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
+            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> President of Team S.C.R.I.P.T, MIT Pune <a href="https://thescriptgroup.in" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
             <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
             <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
             <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
