--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -105,7 +105,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="1.5s"><b><i class="fa fa-gamepad fa-fw w3-margin-right w3-text-teal"></i>Gaming</b></p>
           </div>
           <div id="id01" class="w3-modal">
-            <div class="w3-modal-content w3-card-4">
+            <div class="w3-modal-content w3-card-4 w3-animate-bottom">
               <header class="w3-container w3-teal"> 
                 <span class="w3-button w3-display-topright">&times;</span>
                 <h2 id = "hobby-header">Default Header</h2>
