--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -217,7 +217,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
         <div class="w3-container hideproj">
           <h5 class="w3-opacity"><b>Encrypto</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017 ( <a href="Encrpyto.apk">Download here!</a> )<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>This was the first official app I had developed. It helps one to pass text in an encrypted manner which enhances privacy of messaging.</p>
           <br>
         </div>
