--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -220,6 +220,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017 ( <a href="Encrpyto.apk">Download here!</a> )<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>This was the first official app I had developed. It helps one to pass text in an encrypted manner which enhances privacy of messaging.</p>
           <br>
+          <p>Steps to use: <br>1) Enter your message<br>2) Set a 4 digit code in order to encrypt the message<br>3) Press the lock button to encrypt and press the copy button to copy it<br>4) Send it to the other person and ask to repeat the same process by entering the same PMV code and press unlock button to see the hidden message!</p>
+          <br>
         </div>
         <div class="w3-container w3-center">
           <button id = "hideprojbutton">Show More</button>
