--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
             <p class= "wow bounceInUp"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal w3-margin-top"></i>Programmer</p>
             <p class= "wow bounceInUp" data-wow-delay="0.5s"><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Mumbai, India</p>
-            <p class= "wow bounceInUp" data-wow-delay="1.0s"><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>aniketronaldo10@gmail.com</p>
+            <p class= "wow bounceInUp" data-wow-delay="1.0s"><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>aniketraj@thescriptgroup.in</p>
             <p class= "wow bounceInUp" data-wow-delay="1.5s"><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 9969596700</p>
             <hr>
           
@@ -63,7 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <span class="skill-count_and" style="font-size: 17px; color: white; float: right; padding-right: 5px;">80%</span>
             </div>
           </div>
-          <p>Major Languages (Javascript, C++, Python, JAVA)</p>
+          <p>Major Languages (JavaScript, C++, Python, JAVA)</p>
           <div class="skill">
             <div class="skill-bar skill_ps wow slideInLeft animated">
               <span class="skill-count_ps" style="font-size: 17px; color: white; float: right; padding-right: 5px;">70%</span>
@@ -143,20 +143,26 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       
       <div class="wow bounceInUp">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience and Projects</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.com" target="_blank">mitaarohan.com</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020</h6>
+          <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
+          <hr>
+        </div>
+        <div class="w3-container hidework">
           <h5 class="w3-opacity"><b>ML Intern at AXS Solutions / <a href = "http://axs-solutions.com/" target="_blank">axs-solutions.com</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>I am an intern at AXS Solutions working on a project in the field of Deep Learning. The work exposure is off the charts, and the projects are very interesting as well as innovative.</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - July 2019</h6>
+          <p>I was an intern at AXS Solutions working on a project in the field of Deep Learning. The work exposure is off the charts, and the projects are very interesting as well as innovative.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Data Analyst Intern at Bank of India / <a href="https://www.bankofindia.co.in/english/home.aspx" target = "_blank">www.bankofindia.co.in</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Wanting to explore the depths of Data Analysis, Bank of India graciously accepted me as their intern, to learn and work on their training models. The team working here has given me immense support, and a good overview of what a Data Scientist does.</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2019 - July 2019</h6>
+          <p>Wanting to explore the depth of Data Analysis, Bank of India graciously accepted me as their intern, to learn and work on their training models. The team working here has given me immense support, and a good overview of what a Data Scientist does.</p>
           <hr>
         </div>
-        <div class="w3-container">
+        <div class="w3-container hidework">
           <h5 class="w3-opacity"><b>Web Developer at jS / <a href = "https://www.jamessolomon.co.in/" target="_blank">www.jamessolomon.co.in</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>I am the Web Developer of a new startup by James Solomon, known as jS. We are providing a student interactive platform, whose website will be launched in a short time.</p>
@@ -196,16 +202,24 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user-circle-o fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Personal Projects</h2>
         <div class="w3-container">
+          <h5 class="w3-opacity"><b>Encrypto</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017 ( <a href="Encrpyto.apk">Download here!</a> )<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
+          <p>This was the first official app I had developed. It helps one to pass text in an encrypted manner which enhances privacy of messaging.</p>
+          <br>
+          <p>Steps to use: <br>1) Enter your message<br>2) Set a 4 digit code in order to encrypt the message<br>3) Press the lock button to encrypt and press the copy button to copy it<br>4) Send it to the other person and ask to repeat the same process by entering the same PMV code and press unlock button to see the hidden message!</p>
+          <br>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Progressive Web Application for The S.C.R.I.P.T Group</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>October 2019 <span class="w3-tag w3-text-white w3-round wow flash" data-wow-delay = "1s" style="float: right; background-color: #E7B416;">In Progress</span></h6>
+          <p>Whilst learning about the upcoming PWA technology, I will be incorporating it into my team's website. This will basically be a handy app with a notification pusher and in-app registration service.</p>
+        </div>
+        <hr>
+        <div class="w3-container hideproj">
           <h5 class="w3-opacity"><b>CGPA Calculator for SY.B.Tech CSE ( <a href = "https://bit.ly/sycgpamit" target="_blank">bit.ly/sycgpamit )</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
           <p>As soon as the results of Trimester IV was out, I designed a GPA calculator so that the students can check their GPA for the current Trimester.</p>
           <p></p>
-        </div>
-        <hr>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>My MIT App (A new update)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>November 2018 <span class="w3-tag w3-text-white w3-round wow flash" data-wow-delay = "1s" style="float: right; background-color: #E7B416;">In Progress</span></h6>
-          <p>Along with team S.C.R.I.P.T, I am working on an updated version of the My MIT App with navigation inside college facility, classroom tracker, etc.</p>
         </div>
         <hr>
         <div class="w3-container hideproj">
@@ -214,15 +228,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>A personalized blog tracker built in Python, with multi-user facility and password protection.</p>
           <p>I still have no intentions of making it public, until I design it with a proper GUI and an online 24x7 running server.</p><br>
           <hr>
-        </div>
-
-        <div class="w3-container hideproj">
-          <h5 class="w3-opacity"><b>Encrypto</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>December 2017 ( <a href="Encrpyto.apk">Download here!</a> )<span class="w3-tag w3-text-white w3-round wow flip" data-wow-delay = "1s" style="float: right; background-color: #2DC937;">Completed</span></h6>
-          <p>This was the first official app I had developed. It helps one to pass text in an encrypted manner which enhances privacy of messaging.</p>
-          <br>
-          <p>Steps to use: <br>1) Enter your message<br>2) Set a 4 digit code in order to encrypt the message<br>3) Press the lock button to encrypt and press the copy button to copy it<br>4) Send it to the other person and ask to repeat the same process by entering the same PMV code and press unlock button to see the hidden message!</p>
-          <br>
         </div>
         <div class="w3-container w3-center">
           <button id = "hideprojbutton">Show More</button>
