Added teaching experience as a new section

--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -16,11 +16,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 <link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="css/homepage.css">
 <link rel="stylesheet" href="css/animate.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">-->
 <link rel="icon" href="images/favicon.png">
 <style>
@@ -111,8 +111,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br><hr>
           <p class="w3-large"><b><i class="fa fa-info-circle fa-fw w3-margin-right w3-text-teal speech-bubble"></i>Hobbies    <i style="font-size: 12px;">(List items are clickable!)</i></b></p>
           <div class="hobby-list">
-            <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn"><b><i class="fa fa-futbol-o fa-fw w3-margin-right w3-text-teal"></i>Sports</b></p>
-            <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="0.5s"><b><i class="fa fa-book fa-fw w3-margin-right w3-text-teal"></i>Comic Books</b></p>
+            <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn"><b><i class="fas fa-table-tennis fa-fw w3-margin-right w3-text-teal"></i>Sports</b></p>
+            <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="0.5s"><b><i class="fas fa-book-open fa-fw w3-margin-right w3-text-teal"></i>Comic Books</b></p>
             <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="1.0s"><b><i class="fa fa-music fa-fw w3-margin-right w3-text-teal"></i>Music</b></p>
             <p style="margin-left: 25%; cursor: pointer;" class="wow fadeIn" data-wow-delay="1.5s"><b><i class="fa fa-gamepad fa-fw w3-margin-right w3-text-teal"></i>Gaming</b></p>
           </div>
@@ -145,7 +145,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience and Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.com" target="_blank">mitaarohan.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.com" target="_blank">mitaarohan.netlify.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020</h6>
           <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
           <hr>
@@ -186,15 +186,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
     <div class="wow bounceInUp">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-chalkboard-teacher fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching Experience</h2>
+        <div class="w3-container">
+            <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Game Development using JavaScript (for beginners) by The SCRIPT Group</p>
+            <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Basics of C Programming for First Year Students by The SCRIPT Group</p>
+            <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> Data Structures Practical Examination Crash Course for Second Year CSE Students by School of CET, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> JAVA as Add-on Course for Third Year CSE students by School of CET, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Python as Add-on Course for Second Year CSE students by School of CET, MIT-WPU</p>
+            <p class="wow fadeIn" data-wow-delay="1.2s"><i class="fa fa-code fa-xs fa-spin"></i> Cracking CodeX (Competative Coding Event) by The SCRIPT Group</p>
+        </div>
+      </div>
+    </div>
+    <div class="wow bounceInUp">
+      <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>College Experience and Achievements</h2>
         <div class="w3-container">
             <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Participated in AngelHack Mumbai, 2019</p>
             <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Winner of Ready Set Code 2018, organized by MCUG, MIT-WPU</p>
             <p class="wow fadeIn" data-wow-delay="0.4s"><i class="fa fa-code fa-sm fa-spin"></i> President of The S.C.R.I.P.T Group, MIT Pune <a href="https://thescriptgroup.in" target="_blank" style="font-size: 16px;">( Visit Our Website Here! )</a></a></p>
             <p class="wow fadeIn" data-wow-delay="0.6s"><i class="fa fa-code fa-xs fa-spin"></i> Workshop lecturer at TECHOS organized by S.C.R.I.P.T</p>
-            <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Attended Automation Anywhere Corporate Event.</p>
-            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
-            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
+            <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> Attended Automation Anywhere Corporate Event.</p>
+            <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Organized MIT'S First Successful Comic-Con along with MIT Spandan</p>
+            <p class="wow fadeIn" data-wow-delay="1.2s"><i class="fa fa-code fa-xs fa-spin"></i> Completed N5 Level Japanese</p>
         </div>
       </div>
     </div>
@@ -281,11 +294,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <div class="w3-container">
-    <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fa fa-facebook-official fa-2x w3-hover-opacity w3-padding"></i></a>
-    <a href="https://www.linkedin.com/in/aniket-raj-8630b8180/" target="_blank"><i class="fa fa-linkedin fa-2x w3-hover-opacity w3-padding"></i></a>
-    <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fa fa-instagram fa-2x w3-hover-opacity w3-padding"></i></a>
-    <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fa fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
-    <a href="https://github.com/aniket-spidey" target="_blank"><i class="fa fa-github fa-2x w3-hover-opacity w3-padding"></i></a><br><br>
+    <a href="https://www.facebook.com/aniket.raj.1517" target="_blank"><i class="fab fa-facebook fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://www.linkedin.com/in/aniket-raj-8630b8180/" target="_blank"><i class="fab fa-linkedin fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://www.instagram.com/aniket_spidey/" target="_blank"><i class="fab fa-instagram fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://twitter.com/aniketspidey" target="_blank"><i class="fab fa-twitter fa-2x w3-hover-opacity w3-padding"></i></a>
+    <a href="https://github.com/aniket-spidey" target="_blank"><i class="fab fa-github fa-2x w3-hover-opacity w3-padding"></i></a><br><br>
   </div>
   <div class="wow tada w3-container padding_bottom">
     <i style="background-color: white; color: #009688; border-radius: 5px; padding: 5px; margin-bottom: 10px; ">Make sure you have logged into your own account before visiting mine!</i>
