Added total number of hours

--- a/AniketCV_home.html
+++ b/AniketCV_home.html
@@ -145,7 +145,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience and Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.com" target="_blank">mitaarohan.netlify.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Website development for Aarohan / <a href="http://mitaarohan.netlify.com" target="_blank">mitaarohan.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2020</h6>
           <p>Aarohan, the annual cultural festival of MIT WPU, Pune was started in the year 2014 by a group of passionate individuals of the MIT College of Engineering. With a multitude of events, performances and activities, Aarohan has never failed to cast a spell over the audience.</p>
           <hr>
@@ -186,7 +186,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
     <div class="wow bounceInUp">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-chalkboard-teacher fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fas fa-chalkboard-teacher fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Teaching Experience: <span class="wow flip">45</span> hours</h2>
         <div class="w3-container">
             <p class="wow fadeIn"><i class="fa fa-code fa-xs fa-spin"></i> Game Development using JavaScript (for beginners) by The SCRIPT Group</p>
             <p class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-code fa-xs fa-spin"></i> Basics of C Programming for First Year Students by The SCRIPT Group</p>
@@ -194,7 +194,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <p class="wow fadeIn" data-wow-delay="0.8s"><i class="fa fa-code fa-xs fa-spin"></i> JAVA as Add-on Course for Third Year CSE students by School of CET, MIT-WPU</p>
             <p class="wow fadeIn" data-wow-delay="1.0s"><i class="fa fa-code fa-xs fa-spin"></i> Python as Add-on Course for Second Year CSE students by School of CET, MIT-WPU</p>
             <p class="wow fadeIn" data-wow-delay="1.2s"><i class="fa fa-code fa-xs fa-spin"></i> Cracking CodeX (Competative Coding Event) by The SCRIPT Group</p>
-        </div>
+            <p class="wow fadeIn" data-wow-delay="1.4s"><i class="fa fa-code fa-xs fa-spin"></i> Git and GitHub at HacktoberFest '19 by The SCRIPT Group powered by DigitalOcean</p>
+          </div>
       </div>
     </div>
     <div class="wow bounceInUp">
